--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ section{
     background: rgb(233, 16, 88)
     padding-top: 80px;
     padding-bottom: 80px;
+    display: flex;
+    justify-content: center;
 }
 
 h1 {
