--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@ color:white;
 }
 
 section{
-    background: rgb(233, 16, 88)
+    background: rgb(233, 16, 88);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
     justify-content: center;
 }
 
-div{
+.chamada-texto {
     margin-right: 20px;
 }
 
