--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
-background-color: #000000;
+background-color: #624c4c;
 color:white;
 }
 
 section{
-    background: rgb(233, 16, 88);
+    background: rgb(233,16,88);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
