--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ section{
 img {
     height: 200px;
 }
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+}
 .categoria-videos {
     display: flex;
     overflow-x: auto;
