--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ background-color: #624c4c;
 color:white;
 }
 header {
+    font-family: "Edu AU VIC WA NT Arrows", 
     color: azure;
     font-size: 30px;
     text-transform: uppercase;
