--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ background-color: #624c4c;
 color:white;
 }
 header {
-    font-family: "Edu AU VIC WA NT Arrows", 
+    font-family: "Edu AU VIC WA NT Arrows",
+    cursive; 
     color: azure;
     font-size: 30px;
     text-transform: uppercase;
