--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ cursive;
     text-transform: uppercase;
 }
 
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
 section{
     background: rgb(233,16,88);
     padding-top: 80px;
